// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/FiltersDropdown default 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "paddingLeft": "200px",
          "width": "100%",
        }
      }
    >
      <FiltersState>
        <FiltersDropdownContainer
          filters={
            Object {
              "assetTypes": Object {
                "entrypoint": Object {
                  "defaultValue": true,
                  "label": "Entrypoint",
                },
                "initial": Object {
                  "defaultValue": true,
                  "label": "Initial",
                },
                "label": "Types",
              },
              "changed": Object {
                "defaultValue": true,
                "label": "Changed",
              },
              "fileTypes": Object {
                "CSS": Object {
                  "defaultValue": true,
                  "label": "CSS",
                },
                "HTML": Object {
                  "defaultValue": true,
                  "label": "HTML",
                },
                "JS": Object {
                  "defaultValue": true,
                  "label": "JS",
                },
                "label": "File types",
              },
            }
          }
          onChange={[Function]}
        >
          <FiltersDropdown
            active={false}
            className=""
            filters={
              Object {
                "assetTypes": Object {
                  "entrypoint": Object {
                    "defaultValue": true,
                    "label": "Entrypoint",
                  },
                  "initial": Object {
                    "defaultValue": true,
                    "label": "Initial",
                  },
                  "label": "Types",
                },
                "changed": Object {
                  "defaultValue": true,
                  "label": "Changed",
                },
                "fileTypes": Object {
                  "CSS": Object {
                    "defaultValue": true,
                    "label": "CSS",
                  },
                  "HTML": Object {
                    "defaultValue": true,
                    "label": "HTML",
                  },
                  "JS": Object {
                    "defaultValue": true,
                    "label": "JS",
                  },
                  "label": "File types",
                },
              }
            }
            label="Filters"
            onChange={[Function]}
            toggleFilter={[Function]}
            values={
              Object {
                "assetTypes.entrypoint": true,
                "assetTypes.initial": true,
                "changed": true,
                "fileTypes.CSS": true,
                "fileTypes.HTML": true,
                "fileTypes.JS": true,
              }
            }
          >
            <form
              className="root"
            >
              <FlexStack
                as="div"
                className="items"
                space="xsmall"
              >
                <div
                  className="items root space--xsmall"
                >
                  <Filter
                    checked={true}
                    className="item item filterStandalone"
                    getOnOnlyClick={null}
                    key=".$changed"
                    label="Changed"
                    name="changed"
                    onChange={[Function]}
                  >
                    <div
                      className="filter item item filterStandalone"
                    >
                      <FlexStack
                        as="label"
                        className="filterCheckbox"
                        space="xxxsmall"
                      >
                        <label
                          className="filterCheckbox root space--xxxsmall"
                        >
                          <input
                            checked={true}
                            className="item filterInput"
                            id="filter-changed"
                            key=".0"
                            name="changed"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="item filterLabel"
                            key=".1"
                          >
                            Changed
                          </span>
                        </label>
                      </FlexStack>
                    </div>
                  </Filter>
                  <div
                    className="item item"
                    key=".1"
                  >
                    <FilterGroup
                      data={
                        Object {
                          "entrypoint": Object {
                            "defaultValue": true,
                            "label": "Entrypoint",
                          },
                          "initial": Object {
                            "defaultValue": true,
                            "label": "Initial",
                          },
                          "label": "Types",
                        }
                      }
                      groupKey="assetTypes"
                      key="assetTypes"
                      onCheckboxChange={[Function]}
                      values={
                        Object {
                          "assetTypes.entrypoint": true,
                          "assetTypes.initial": true,
                          "changed": true,
                          "fileTypes.CSS": true,
                          "fileTypes.HTML": true,
                          "fileTypes.JS": true,
                        }
                      }
                    >
                      <DropdownContainer
                        label="Types: all"
                      >
                        <OutsideClickHandler
                          disabled={false}
                          display="block"
                          onOutsideClick={[Function]}
                          useCapture={true}
                        >
                          <div>
                            <Dropdown
                              activeLabel={false}
                              align="left"
                              className=""
                              dropdownToggle={[Function]}
                              glyph={null}
                              label="Types: all"
                              open={false}
                            >
                              <div
                                className="root left"
                              >
                                <button
                                  className="label"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  Types: all
                                </button>
                                <div
                                  className="dropdown"
                                >
                                  <Filter
                                    checked={true}
                                    className=""
                                    getOnOnlyClick={[Function]}
                                    key="assetTypes.entrypoint"
                                    label="Entrypoint"
                                    name="assetTypes.entrypoint"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="filter"
                                    >
                                      <FlexStack
                                        as="label"
                                        className="filterCheckbox"
                                        space="xxxsmall"
                                      >
                                        <label
                                          className="filterCheckbox root space--xxxsmall"
                                        >
                                          <input
                                            checked={true}
                                            className="item filterInput"
                                            id="filter-assetTypes.entrypoint"
                                            key=".0"
                                            name="assetTypes.entrypoint"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="item filterLabel"
                                            key=".1"
                                          >
                                            Entrypoint
                                          </span>
                                        </label>
                                      </FlexStack>
                                      <button
                                        className="filterOnlyButton"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        only
                                      </button>
                                    </div>
                                  </Filter>
                                  <Filter
                                    checked={true}
                                    className=""
                                    getOnOnlyClick={[Function]}
                                    key="assetTypes.initial"
                                    label="Initial"
                                    name="assetTypes.initial"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="filter"
                                    >
                                      <FlexStack
                                        as="label"
                                        className="filterCheckbox"
                                        space="xxxsmall"
                                      >
                                        <label
                                          className="filterCheckbox root space--xxxsmall"
                                        >
                                          <input
                                            checked={true}
                                            className="item filterInput"
                                            id="filter-assetTypes.initial"
                                            key=".0"
                                            name="assetTypes.initial"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="item filterLabel"
                                            key=".1"
                                          >
                                            Initial
                                          </span>
                                        </label>
                                      </FlexStack>
                                      <button
                                        className="filterOnlyButton"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        only
                                      </button>
                                    </div>
                                  </Filter>
                                  <div
                                    className="filterGroupActions"
                                  >
                                    <button
                                      className="filterGroupButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Clear all
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </Dropdown>
                          </div>
                        </OutsideClickHandler>
                      </DropdownContainer>
                    </FilterGroup>
                  </div>
                  <div
                    className="item item"
                    key=".2"
                  >
                    <FilterGroup
                      data={
                        Object {
                          "CSS": Object {
                            "defaultValue": true,
                            "label": "CSS",
                          },
                          "HTML": Object {
                            "defaultValue": true,
                            "label": "HTML",
                          },
                          "JS": Object {
                            "defaultValue": true,
                            "label": "JS",
                          },
                          "label": "File types",
                        }
                      }
                      groupKey="fileTypes"
                      key="fileTypes"
                      onCheckboxChange={[Function]}
                      values={
                        Object {
                          "assetTypes.entrypoint": true,
                          "assetTypes.initial": true,
                          "changed": true,
                          "fileTypes.CSS": true,
                          "fileTypes.HTML": true,
                          "fileTypes.JS": true,
                        }
                      }
                    >
                      <DropdownContainer
                        label="File types: all"
                      >
                        <OutsideClickHandler
                          disabled={false}
                          display="block"
                          onOutsideClick={[Function]}
                          useCapture={true}
                        >
                          <div>
                            <Dropdown
                              activeLabel={false}
                              align="left"
                              className=""
                              dropdownToggle={[Function]}
                              glyph={null}
                              label="File types: all"
                              open={false}
                            >
                              <div
                                className="root left"
                              >
                                <button
                                  className="label"
                                  onClick={[Function]}
                                  type="button"
                                >
                                  File types: all
                                </button>
                                <div
                                  className="dropdown"
                                >
                                  <Filter
                                    checked={true}
                                    className=""
                                    getOnOnlyClick={[Function]}
                                    key="fileTypes.CSS"
                                    label="CSS"
                                    name="fileTypes.CSS"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="filter"
                                    >
                                      <FlexStack
                                        as="label"
                                        className="filterCheckbox"
                                        space="xxxsmall"
                                      >
                                        <label
                                          className="filterCheckbox root space--xxxsmall"
                                        >
                                          <input
                                            checked={true}
                                            className="item filterInput"
                                            id="filter-fileTypes.CSS"
                                            key=".0"
                                            name="fileTypes.CSS"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="item filterLabel"
                                            key=".1"
                                          >
                                            CSS
                                          </span>
                                        </label>
                                      </FlexStack>
                                      <button
                                        className="filterOnlyButton"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        only
                                      </button>
                                    </div>
                                  </Filter>
                                  <Filter
                                    checked={true}
                                    className=""
                                    getOnOnlyClick={[Function]}
                                    key="fileTypes.JS"
                                    label="JS"
                                    name="fileTypes.JS"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="filter"
                                    >
                                      <FlexStack
                                        as="label"
                                        className="filterCheckbox"
                                        space="xxxsmall"
                                      >
                                        <label
                                          className="filterCheckbox root space--xxxsmall"
                                        >
                                          <input
                                            checked={true}
                                            className="item filterInput"
                                            id="filter-fileTypes.JS"
                                            key=".0"
                                            name="fileTypes.JS"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="item filterLabel"
                                            key=".1"
                                          >
                                            JS
                                          </span>
                                        </label>
                                      </FlexStack>
                                      <button
                                        className="filterOnlyButton"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        only
                                      </button>
                                    </div>
                                  </Filter>
                                  <Filter
                                    checked={true}
                                    className=""
                                    getOnOnlyClick={[Function]}
                                    key="fileTypes.HTML"
                                    label="HTML"
                                    name="fileTypes.HTML"
                                    onChange={[Function]}
                                  >
                                    <div
                                      className="filter"
                                    >
                                      <FlexStack
                                        as="label"
                                        className="filterCheckbox"
                                        space="xxxsmall"
                                      >
                                        <label
                                          className="filterCheckbox root space--xxxsmall"
                                        >
                                          <input
                                            checked={true}
                                            className="item filterInput"
                                            id="filter-fileTypes.HTML"
                                            key=".0"
                                            name="fileTypes.HTML"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="item filterLabel"
                                            key=".1"
                                          >
                                            HTML
                                          </span>
                                        </label>
                                      </FlexStack>
                                      <button
                                        className="filterOnlyButton"
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        only
                                      </button>
                                    </div>
                                  </Filter>
                                  <div
                                    className="filterGroupActions"
                                  >
                                    <button
                                      className="filterGroupButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Clear all
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </Dropdown>
                          </div>
                        </OutsideClickHandler>
                      </DropdownContainer>
                    </FilterGroup>
                  </div>
                </div>
              </FlexStack>
            </form>
          </FiltersDropdown>
        </FiltersDropdownContainer>
      </FiltersState>
    </div>
  </Router>
</MemoryRouter>
`;

exports[`Storyshots UI/FiltersDropdown disable options 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "home",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "home",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "padding": "24px",
          "paddingLeft": "200px",
          "width": "100%",
        }
      }
    >
      <FiltersDropdownContainer
        filters={
          Object {
            "changed": Object {
              "defaultValue": false,
              "disabled": true,
              "label": "Changed",
            },
            "entrypoint": Object {
              "defaultValue": false,
              "label": "Entrypoint",
            },
            "fileTypes": Object {
              "CSS": Object {
                "defaultValue": true,
                "label": "CSS",
              },
              "HTML": Object {
                "defaultValue": true,
                "label": "HTML",
              },
              "JS": Object {
                "defaultValue": true,
                "label": "JS",
              },
              "label": "File types",
            },
          }
        }
        onChange={[Function]}
      >
        <FiltersDropdown
          active={false}
          className=""
          filters={
            Object {
              "changed": Object {
                "defaultValue": false,
                "disabled": true,
                "label": "Changed",
              },
              "entrypoint": Object {
                "defaultValue": false,
                "label": "Entrypoint",
              },
              "fileTypes": Object {
                "CSS": Object {
                  "defaultValue": true,
                  "label": "CSS",
                },
                "HTML": Object {
                  "defaultValue": true,
                  "label": "HTML",
                },
                "JS": Object {
                  "defaultValue": true,
                  "label": "JS",
                },
                "label": "File types",
              },
            }
          }
          label="Filters"
          onChange={[Function]}
          toggleFilter={[Function]}
          values={
            Object {
              "changed": false,
              "entrypoint": false,
              "fileTypes.CSS": true,
              "fileTypes.HTML": true,
              "fileTypes.JS": true,
            }
          }
        >
          <form
            className="root"
          >
            <FlexStack
              as="div"
              className="items"
              space="xsmall"
            >
              <div
                className="items root space--xsmall"
              >
                <Filter
                  checked={false}
                  className="item item filterStandalone"
                  disabled={true}
                  getOnOnlyClick={null}
                  key=".$changed"
                  label="Changed"
                  name="changed"
                  onChange={[Function]}
                >
                  <div
                    className="filter item item filterStandalone"
                  >
                    <FlexStack
                      as="label"
                      className="filterCheckbox"
                      space="xxxsmall"
                    >
                      <label
                        className="filterCheckbox root space--xxxsmall"
                      >
                        <input
                          checked={false}
                          className="item filterInput"
                          disabled={true}
                          id="filter-changed"
                          key=".0"
                          name="changed"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="item filterLabel"
                          key=".1"
                        >
                          Changed
                        </span>
                      </label>
                    </FlexStack>
                  </div>
                </Filter>
                <Filter
                  checked={false}
                  className="item item filterStandalone"
                  getOnOnlyClick={null}
                  key=".$entrypoint"
                  label="Entrypoint"
                  name="entrypoint"
                  onChange={[Function]}
                >
                  <div
                    className="filter item item filterStandalone"
                  >
                    <FlexStack
                      as="label"
                      className="filterCheckbox"
                      space="xxxsmall"
                    >
                      <label
                        className="filterCheckbox root space--xxxsmall"
                      >
                        <input
                          checked={false}
                          className="item filterInput"
                          id="filter-entrypoint"
                          key=".0"
                          name="entrypoint"
                          onChange={[Function]}
                          type="checkbox"
                        />
                        <span
                          className="item filterLabel"
                          key=".1"
                        >
                          Entrypoint
                        </span>
                      </label>
                    </FlexStack>
                  </div>
                </Filter>
                <div
                  className="item item"
                  key=".2"
                >
                  <FilterGroup
                    data={
                      Object {
                        "CSS": Object {
                          "defaultValue": true,
                          "label": "CSS",
                        },
                        "HTML": Object {
                          "defaultValue": true,
                          "label": "HTML",
                        },
                        "JS": Object {
                          "defaultValue": true,
                          "label": "JS",
                        },
                        "label": "File types",
                      }
                    }
                    groupKey="fileTypes"
                    key="fileTypes"
                    onCheckboxChange={[Function]}
                    values={
                      Object {
                        "changed": false,
                        "entrypoint": false,
                        "fileTypes.CSS": true,
                        "fileTypes.HTML": true,
                        "fileTypes.JS": true,
                      }
                    }
                  >
                    <DropdownContainer
                      label="File types: all"
                    >
                      <OutsideClickHandler
                        disabled={false}
                        display="block"
                        onOutsideClick={[Function]}
                        useCapture={true}
                      >
                        <div>
                          <Dropdown
                            activeLabel={false}
                            align="left"
                            className=""
                            dropdownToggle={[Function]}
                            glyph={null}
                            label="File types: all"
                            open={false}
                          >
                            <div
                              className="root left"
                            >
                              <button
                                className="label"
                                onClick={[Function]}
                                type="button"
                              >
                                File types: all
                              </button>
                              <div
                                className="dropdown"
                              >
                                <Filter
                                  checked={true}
                                  className=""
                                  getOnOnlyClick={[Function]}
                                  key="fileTypes.CSS"
                                  label="CSS"
                                  name="fileTypes.CSS"
                                  onChange={[Function]}
                                >
                                  <div
                                    className="filter"
                                  >
                                    <FlexStack
                                      as="label"
                                      className="filterCheckbox"
                                      space="xxxsmall"
                                    >
                                      <label
                                        className="filterCheckbox root space--xxxsmall"
                                      >
                                        <input
                                          checked={true}
                                          className="item filterInput"
                                          id="filter-fileTypes.CSS"
                                          key=".0"
                                          name="fileTypes.CSS"
                                          onChange={[Function]}
                                          type="checkbox"
                                        />
                                        <span
                                          className="item filterLabel"
                                          key=".1"
                                        >
                                          CSS
                                        </span>
                                      </label>
                                    </FlexStack>
                                    <button
                                      className="filterOnlyButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      only
                                    </button>
                                  </div>
                                </Filter>
                                <Filter
                                  checked={true}
                                  className=""
                                  getOnOnlyClick={[Function]}
                                  key="fileTypes.JS"
                                  label="JS"
                                  name="fileTypes.JS"
                                  onChange={[Function]}
                                >
                                  <div
                                    className="filter"
                                  >
                                    <FlexStack
                                      as="label"
                                      className="filterCheckbox"
                                      space="xxxsmall"
                                    >
                                      <label
                                        className="filterCheckbox root space--xxxsmall"
                                      >
                                        <input
                                          checked={true}
                                          className="item filterInput"
                                          id="filter-fileTypes.JS"
                                          key=".0"
                                          name="fileTypes.JS"
                                          onChange={[Function]}
                                          type="checkbox"
                                        />
                                        <span
                                          className="item filterLabel"
                                          key=".1"
                                        >
                                          JS
                                        </span>
                                      </label>
                                    </FlexStack>
                                    <button
                                      className="filterOnlyButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      only
                                    </button>
                                  </div>
                                </Filter>
                                <Filter
                                  checked={true}
                                  className=""
                                  getOnOnlyClick={[Function]}
                                  key="fileTypes.HTML"
                                  label="HTML"
                                  name="fileTypes.HTML"
                                  onChange={[Function]}
                                >
                                  <div
                                    className="filter"
                                  >
                                    <FlexStack
                                      as="label"
                                      className="filterCheckbox"
                                      space="xxxsmall"
                                    >
                                      <label
                                        className="filterCheckbox root space--xxxsmall"
                                      >
                                        <input
                                          checked={true}
                                          className="item filterInput"
                                          id="filter-fileTypes.HTML"
                                          key=".0"
                                          name="fileTypes.HTML"
                                          onChange={[Function]}
                                          type="checkbox"
                                        />
                                        <span
                                          className="item filterLabel"
                                          key=".1"
                                        >
                                          HTML
                                        </span>
                                      </label>
                                    </FlexStack>
                                    <button
                                      className="filterOnlyButton"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      only
                                    </button>
                                  </div>
                                </Filter>
                                <div
                                  className="filterGroupActions"
                                >
                                  <button
                                    className="filterGroupButton"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    Clear all
                                  </button>
                                </div>
                              </div>
                            </div>
                          </Dropdown>
                        </div>
                      </OutsideClickHandler>
                    </DropdownContainer>
                  </FilterGroup>
                </div>
              </div>
            </FlexStack>
          </form>
        </FiltersDropdown>
      </FiltersDropdownContainer>
    </div>
  </Router>
</MemoryRouter>
`;
